WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107108
[WK2] TiledCoreAnimationDrawingArea should unparent its layer tree when requested
https://bugs.webkit.org/show_bug.cgi?id=107108
Summary
[WK2] TiledCoreAnimationDrawingArea should unparent its layer tree when reque...
Tim Horton
Reported
2013-01-17 02:24:13 PST
Currently, TiledCoreAnimationDrawingArea returns early if asked to unparent its layer tree, to prevent flashing when switching tabs. We have new plans to alleviate the flashing, but first, we should reinstate unparenting the root layer. <
rdar://problem/12549879
>
Attachments
patch
(2.55 KB, patch)
2013-01-17 02:28 PST
,
Tim Horton
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-01-17 02:28:01 PST
Created
attachment 183155
[details]
patch
Tim Horton
Comment 2
2013-01-17 11:02:54 PST
Thanks, Darin!
http://trac.webkit.org/changeset/140002
Benjamin Poulain
Comment 3
2013-01-17 12:59:58 PST
There are 20 failed assertion on the debug bot:
http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK2%20(Tests)/r140002%20(5931)/results.html
This may be the cause.
Tim Horton
Comment 4
2013-01-17 13:10:07 PST
(In reply to
comment #3
)
> There are 20 failed assertion on the debug bot:
http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK2%20(Tests)/r140002%20(5931)/results.html
> > This may be the cause.
Whoops. Fixed in
http://trac.webkit.org/changeset/140033
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug