[WK2] TiledCoreAnimationDrawingArea should unparent its layer tree when requested https://bugs.webkit.org/show_bug.cgi?id=107108 <rdar://problem/12549879>

Reviewed by Darin Adler and Simon Fraser.

Currently, TiledCoreAnimationDrawingArea returns early if asked to unparent
its layer tree, to prevent flashing when switching tabs. We have new plans
to alleviate the flashing, but first, we should reinstate unparenting the root layer,
to allow underlying libraries to better manage the memory backing all compositing layers.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::setRootCompositingLayer):


Canonical link: https://commits.webkit.org/125375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140002 268f45cc-cd09-0410-ab3c-d52691b4dbfc